--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,17 @@
 async-timeout==4.0.2
+cachelib==0.9.0
 certifi==2022.12.7
 charset-normalizer==2.1.1
 click==8.1.3
 colorama==0.4.6
 Flask==2.2.2
+Flask-Session==0.4.0
 gunicorn==20.1.0
 idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.1
+python-dotenv==0.21.0
 redis==4.4.0
 requests==2.28.1
 six==1.16.0
