--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.1
+Pillow==9.4.0
 python-dotenv==0.21.0
 redis==4.4.0
 requests==2.28.1
